--- a/venus/src/pages/account/styles.css
+++ b/venus/src/pages/account/styles.css
@@ -1,5 +1,5 @@
 .background-image {
-    background-image: url('assets/bg-kapi2.png');
+    background-image: url('../../assets/bg-kapi2.png');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
