MER-145 added <style> to email templates so it can be put to css inliner

--- a/vulcanus/src/main/resources/templates/forgotPasswordEmail.html
+++ b/vulcanus/src/main/resources/templates/forgotPasswordEmail.html
@@ -3,18 +3,77 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- Style do css-inliner żeby sie nie bawić
+<style>
+    .divbody {
+        margin: 0;
+        padding: 0;
+        font-family: Arial, sans-serif;
+        background-color: #f4f4f4;
+    }
+
+    /*PIERWSZY DIV*/
+    .container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+    }
+
+    /*DRUGI DIV*/
+    .content {
+        background: #ffffff;
+        padding: 5%;
+        border-radius: 8px;
+        text-align: center;
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        width: 90%;
+        max-width: 600px;
+    }
+
+    h1 {
+        color: #333;
+    }
+
+    a {
+        background-color: #007bff;
+        color: white;
+        padding: 1% 4%;
+        text-align: center;
+        text-decoration: none;
+        border-radius: 5px;
+        display: inline-block;
+        font-size: 1.5rem;
+        max-width: 250px;
+    }
+
+    p {
+        color: #555;
+    }
+
+    .logo {
+        width: 15%;
+        max-width: 120px;
+        height: auto;
+        border-radius: 4px;
+        margin-top: 4%;
+    }
+</style>
+-->
+
 </head>
 <div style="margin: 0; padding: 0; font-family: Arial, sans-serif; background-color: #f4f4f4; display: flex; justify-content: center; align-items: center; height: 100vh;">
-    <div style="background: #ffffff; padding: 20px; border-radius: 8px; text-align: center; box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);">
+    <div style="background: #ffffff; padding: 5%; border-radius: 8px; text-align: center; box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); width: 90%; max-width: 600px;">
         <h1 style="color: #333;">Hi <span th:text="${username}"></span>, here is your password reset link:</h1>
         <a th:href="${resetLink}"
-           style="background-color: #007bff; color: white; padding: 10px 20px; text-align: center; text-decoration: none; border-radius: 5px; display: inline-block; margin: 20px 0; font-size: 22px;">
+           style="background-color: #007bff; color: white; padding: 1% 4%; text-align: center; text-decoration: none; border-radius: 5px; display: inline-block; font-size: 1.5rem; max-width: 250px;">
             Reset Password
         </a>
         <p style="color: #555;">If you weren't trying to reset your password, please ignore this email.</p>
-        <div style="margin-top: 20px;">
+        <div style="margin-top: 4%;">
             <img src="https://drive.google.com/thumbnail?id=1N6KlXDVxQqW51nvtQr7yrz9WaRPFWqFt" alt="Logo"
-                 style="max-width: 100px; border-radius: 4px;">
+                 style="width: 15%; max-width: 120px; height: auto; border-radius: 4px;">
         </div>
     </div>
 </div>
