--- a/vulcanus/src/main/resources/templates/registrationEmail.html
+++ b/vulcanus/src/main/resources/templates/registrationEmail.html
@@ -3,16 +3,66 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Style do css-inliner żeby sie nie bawić
+    <style>
+        .divbody {
+            margin: 0;
+            padding: 0;
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f4;
+        }
+        /*PIERWSZY DIV*/
+        .container {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+        }
+        /*DRUGI DIV*/
+        .content {
+            background: #ffffff;
+            padding: 3%;
+            border-radius: 8px;
+            text-align: center;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+            width: 90%;
+            max-width: 600px;
+        }
+
+
+        h1 {
+            color: #333;
+        }
+
+        p {
+            color: #555;
+        }
+
+        p:last-of-type {
+            color: #777;
+        }
+
+        .logo {
+            width: 15%;
+            max-width: 120px;
+            height: auto;
+            border-radius: 4px;
+            margin-top: 4%;
+        }
+    </style>
+-->
+
 </head>
 <div style="margin: 0; padding: 0; font-family: Arial, sans-serif; background-color: #f4f4f4; display: flex; justify-content: center; align-items: center; height: 100vh;">
-<div style="background: #ffffff; padding: 20px; border-radius: 8px; text-align: center; box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);">
-    <h1 style="color: #333;">Welcome, <span th:text="${username}"></span>!</h1>
-    <p style="color: #555;">Thank you for registering in our service. Your account is now active.</p>
-    <p style="color: #777;">If you did not register, please ignore this email.</p>
-    <div style="margin-top: 20px;">
-        <img src="https://drive.google.com/thumbnail?id=1N6KlXDVxQqW51nvtQr7yrz9WaRPFWqFt" alt="Logo" style="max-width: 100px; border-radius: 4px;">
+    <div style="background: #ffffff; padding: 3%; border-radius: 8px; text-align: center; box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); width: 90%; max-width: 600px;">
+        <h1 style="color: #333;">Welcome, <span th:text="${username}"></span>!</h1>
+        <p style="color: #555;">Thank you for registering in our service. Your account is now active.</p>
+        <p style="color: #777;">If you did not register, please ignore this email.</p>
+        <div style="margin-top: 4%;">
+            <img src="https://drive.google.com/thumbnail?id=1N6KlXDVxQqW51nvtQr7yrz9WaRPFWqFt" alt="Logo"
+                 style="width: 15%; max-width: 120px; height: auto; border-radius: 4px;">
+        </div>
     </div>
-</div>
 </div>
 </html>
 
