--- a/venus/src/index.css
+++ b/venus/src/index.css
@@ -11,5 +11,5 @@
 /*jeszcze nie rozgryzłem czemu ale styl do rozmiaru mapy musi być w index.css, inaczej nie działa*/
 .leaflet-container {
     height: 95vh;
-    width: 100%;
+    width: 100%;/
 }
