--- a/vulcanus/src/main/resources/templates/cssInliner/testEmail.html
+++ b/vulcanus/src/main/resources/templates/cssInliner/testEmail.html
@@ -6,32 +6,48 @@
 
     <style>
         table {
+            border-collapse: separate;
             border-spacing: 0;
         }
 
         td {
             padding: 0;
+            font-family: Arial, sans-serif;
         }
 
         .main {
             table-layout: fixed;
-        }
-
-        .container {
+            background-color: #f4f4f4;
+            text-align: center;
             width: 100%;
             height: 100vh;
         }
 
         .content {
-            text-align: center;
-            background-color: #f0f0f0;
+            background-color: #ffffff;
+            padding: 2%;
+            border-radius: 8px;
+            width: 90%;
+            max-width: 600px;
+            margin: auto;
+        }
+
+        h1 {
+            color: #333;
+        }
+
+        p {
+            color: #555;
         }
 
         .logo {
             border: 0;
-            width: 15%;
             border-radius: 4px;
+            width: 15%;
+            max-width: 120px;
+            margin-top: 2%;
         }
+
     </style>
 
     <title>Test</title>
@@ -39,16 +55,30 @@
 <body>
 
 <table class="main">
-    <tr class="container">
-        <td class="content">
-            <h1>Welcome, <span th:text="${username}"></span>!</h1>
-            <p>Thank you for registering in our service. Your account is now active.</p>
-            <p>If you did not register, please ignore this email.</p>
-            <img
-                    src="https://drive.google.com/thumbnail?id=1N6KlXDVxQqW51nvtQr7yrz9WaRPFWqFt"
-                    alt="Logo"
-                    class="logo"
-            />
+    <tr>
+        <td>
+            <table class="content">
+                <tr>
+                    <td>
+                        <h1>Welcome, <span th:text="${username}"></span>!</h1>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <p>Thank you for registering in our service. Your account is now active.</p>
+                        <p>If you did not register, please ignore this email.</p>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <img
+                                src="https://drive.google.com/thumbnail?id=1N6KlXDVxQqW51nvtQr7yrz9WaRPFWqFt"
+                                alt="Logo"
+                                class="logo"
+                        />
+                    </td>
+                </tr>
+            </table>
         </td>
     </tr>
 </table>
