--- a/vulcanus/src/main/resources/templates/cssInliner/registrationEmailForCssInliner.html
+++ b/vulcanus/src/main/resources/templates/cssInliner/registrationEmailForCssInliner.html
@@ -2,61 +2,36 @@
 <html lang="en">
 <head>
     <meta http-equiv="Content-Type" content="text/html charset=UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
     <!--THIS FILE IS MEANT FOR CSS INLINER ONLY!!! -->
 
     <style>
         table {
             border-collapse: separate;
-            padding: 0;
             border-spacing: 0;
-            border: 0;
         }
 
-        a, a:link, a:visited {
-            text-decoration: none;
-            color: #00788a;
-        }
-
-        a:hover {
-            text-decoration: underline;
-        }
-
-        h2, h2 a, h2 a:visited, h3, h3 a, h3 a:visited, h4, h5, h6, .t_cht {
-            color: #000;
-        }
-
-        .ExternalClass p, .ExternalClass span, .ExternalClass font, .ExternalClass td {
-            line-height: 100%;
-        }
-
-        .ExternalClass {
-            width: 100%;
-        }
-
-        .divbody {
-            margin: 0;
+        td {
             padding: 0;
             font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
         }
 
-        .container {
-            display: flex;
-            justify-content: center;
-            align-items: center;
+        .main {
+            table-layout: fixed;
+            background-color: #f4f4f4;
+            text-align: center;
+            width: 100%;
             height: 100vh;
         }
 
         .content {
-            background: #ffffff;
-            padding: 3%;
+            background-color: #ffffff;
+            padding: 2%;
             border-radius: 8px;
-            text-align: center;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
             width: 90%;
             max-width: 600px;
+            margin: auto;
         }
 
         h1 {
@@ -67,33 +42,44 @@
             color: #555;
         }
 
-        p:last-of-type {
-            color: #777;
-        }
-
         .logo {
+            border: 0;
+            border-radius: 4px;
             width: 15%;
             max-width: 120px;
-            height: auto;
-            border-radius: 4px;
-            margin-top: 4%;
+            margin-top: 2%;
         }
+
     </style>
 
-    <title>Registration Confirmation</title>
+    <title>Test</title>
 </head>
-<table class="divbody">
-    <tr class="container">
-        <td class="content">
-            <h1>Welcome, <span th:text="${username}"></span>!</h1>
-            <p>Thank you for registering in our service. Your account is now active.</p>
-            <p>If you did not register, please ignore this email.</p>
-            <img
-                    src="https://drive.google.com/thumbnail?id=1N6KlXDVxQqW51nvtQr7yrz9WaRPFWqFt"
-                    alt="Logo"
-                    class="logo"
-            />
+<body>
+
+<table class="main">
+    <tr>
+        <td>
+            <table class="content">
+                <tr>
+                    <td>
+                        <h1>Welcome, <span th:text="${username}"></span>!</h1>
+                        <p>Thank you for registering in our service. Your account is now active.</p>
+                        <p>If you did not register, please ignore this email.</p>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <img
+                                src="https://drive.google.com/thumbnail?id=1N6KlXDVxQqW51nvtQr7yrz9WaRPFWqFt"
+                                alt="Logo"
+                                class="logo"
+                        />
+                    </td>
+                </tr>
+            </table>
         </td>
     </tr>
 </table>
+
+</body>
 </html>
