--- a/vulcanus/src/main/resources/templates/registrationEmail.html
+++ b/vulcanus/src/main/resources/templates/registrationEmail.html
@@ -1,19 +1,31 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta http-equiv="Content-Type" content="text/html charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
-<div style="margin: 0; padding: 0; font-family: Arial, sans-serif; background-color: #f4f4f4; display: flex; justify-content: center; align-items: center; height: 100vh;">
-    <div style="background: #ffffff; padding: 3%; border-radius: 8px; text-align: center; box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); width: 90%; max-width: 600px;">
-        <h1 style="color: #333;">Welcome, <span th:text="${username}"></span>!</h1>
-        <p style="color: #555;">Thank you for registering in our service. Your account is now active.</p>
-        <p style="color: #777;">If you did not register, please ignore this email.</p>
-        <div style="margin-top: 4%;">
-            <img src="https://drive.google.com/thumbnail?id=1DtSGKUtXqqos1mMsuXiPrFrTwEBE_m5Q" alt="Logo"
-                 style="width: 15%; max-width: 120px; height: auto; border-radius: 4px;">
-        </div>
-    </div>
-</div>
-</html>
+<body>
 
+<table class="main" style="border-collapse: separate;border-spacing: 0;table-layout: fixed;background-color: #f4f4f4;text-align: center;width: 100%;height: 100vh;">
+    <tr>
+        <td style="padding: 0;font-family: Arial, sans-serif;">
+            <table class="content" style="border-collapse: separate;border-spacing: 0;background-color: #ffffff;padding: 2%;border-radius: 8px;width: 90%;max-width: 600px;margin: auto;">
+                <tr>
+                    <td style="padding: 0;font-family: Arial, sans-serif;">
+                        <h1 style="color: #333;">Welcome, <span th:text="${username}"></span>!</h1>
+                        <p style="color: #555;">Thank you for registering in our service. Your account is now active.</p>
+                        <p style="color: #555;">If you did not register, please ignore this email.</p>
+                    </td>
+                </tr>
+                <tr>
+                    <td style="padding: 0;font-family: Arial, sans-serif;">
+                        <img src="https://drive.google.com/thumbnail?id=1N6KlXDVxQqW51nvtQr7yrz9WaRPFWqFt" alt="Logo" class="logo" style="border: 0;border-radius: 4px;width: 15%;max-width: 120px;margin-top: 2%;">
+                    </td>
+                </tr>
+            </table>
+        </td>
+    </tr>
+</table>
+
+</body>
+</html>
