--- a/vulcanus/src/main/resources/templates/cssInliner/forgotPasswordEmailForCssInliner.html
+++ b/vulcanus/src/main/resources/templates/cssInliner/forgotPasswordEmailForCssInliner.html
@@ -1,38 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="Content-Type" content="text/html charset=UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
     <!--THIS FILE IS MEANT FOR CSS INLINER ONLY!!! -->
 
     <style>
-        .divbody {
-            margin: 0;
-            padding: 0;
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
+        table {
+            border-collapse: separate;
+            border-spacing: 0;
         }
 
-        .container {
-            display: flex;
-            justify-content: center;
-            align-items: center;
+        td {
+            padding: 0;
+            font-family: Arial, sans-serif;
+        }
+
+        .main {
+            table-layout: fixed;
+            background-color: #f4f4f4;
+            text-align: center;
+            width: 100%;
             height: 100vh;
         }
 
         .content {
-            background: #ffffff;
-            padding: 5%;
+            background-color: #ffffff;
+            padding: 2%;
             border-radius: 8px;
-            text-align: center;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
             width: 90%;
             max-width: 600px;
-        }
-
-        h1 {
-            color: #333;
+            margin: auto;
         }
 
         a {
@@ -42,9 +41,12 @@
             text-align: center;
             text-decoration: none;
             border-radius: 5px;
-            display: inline-block;
             font-size: 1.5rem;
             max-width: 250px;
+        }
+
+        h1 {
+            color: #333;
         }
 
         p {
@@ -52,28 +54,48 @@
         }
 
         .logo {
+            border: 0;
+            border-radius: 4px;
             width: 15%;
             max-width: 120px;
-            height: auto;
-            border-radius: 4px;
-            margin-top: 4%;
+            margin-top: 2%;
         }
+
     </style>
 
-    <title>Password Reset</title>
 </head>
-<div class ="divbody">
-<div class="container">
-    <div class="content">
-        <h1>Hi <span th:text="${username}"></span>, here is your password reset link:</h1>
-        <a th:href="${resetLink}">
-            Reset Password
-        </a>
-        <p>If you weren't trying to reset your password, please ignore this email.</p>
-        <div>
-            <img src="https://drive.google.com/thumbnail?id=1N6KlXDVxQqW51nvtQr7yrz9WaRPFWqFt" alt="Logo" class="logo">
-        </div>
-    </div>
-</div>
-</div>
+<body>
+
+<table class="main">
+    <tr>
+        <td>
+            <table class="content">
+                <tr>
+                    <td>
+                        <h1>Hi <span th:text="${username}"></span>, here is your password reset link:</h1>
+                        <a th:href="${resetLink}">
+                            Reset Password
+                        </a>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <p>If you weren't trying to reset your password, please ignore this email.</p>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <img
+                                src="https://drive.google.com/thumbnail?id=1N6KlXDVxQqW51nvtQr7yrz9WaRPFWqFt"
+                                alt="Logo"
+                                class="logo"
+                        />
+                    </td>
+                </tr>
+            </table>
+        </td>
+    </tr>
+</table>
+
+</body>
 </html>
