--- a/vulcanus/src/main/resources/templates/cssInliner/registrationEmailForCssInliner.html
+++ b/vulcanus/src/main/resources/templates/cssInliner/registrationEmailForCssInliner.html
@@ -1,34 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="Content-Type" content="text/html charset=UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
     <!--THIS FILE IS MEANT FOR CSS INLINER ONLY!!! -->
 
     <style>
-        .divbody {
-            margin: 0;
-            padding: 0;
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
+        table {
+            border-collapse: separate;
+            border-spacing: 0;
         }
 
-        .container {
-            display: flex;
-            justify-content: center;
-            align-items: center;
+        td {
+            padding: 0;
+            font-family: Arial, sans-serif;
+        }
+
+        .main {
+            table-layout: fixed;
+            background-color: #f4f4f4;
+            text-align: center;
+            width: 100%;
             height: 100vh;
         }
 
         .content {
-            background: #ffffff;
-            padding: 3%;
+            background-color: #ffffff;
+            padding: 2%;
             border-radius: 8px;
-            text-align: center;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
             width: 90%;
             max-width: 600px;
+            margin: auto;
         }
 
         h1 {
@@ -39,32 +42,43 @@
             color: #555;
         }
 
-        p:last-of-type {
-            color: #777;
-        }
-
         .logo {
+            border: 0;
+            border-radius: 4px;
             width: 15%;
             max-width: 120px;
-            height: auto;
-            border-radius: 4px;
-            margin-top: 4%;
+            margin-top: 2%;
         }
+
     </style>
 
-    <title>Registration Confirmation</title>
 </head>
-<div class="divbody">
-    <div class="container">
-        <div class="content">
-            <h1>Welcome, <span th:text="${username}"></span>!</h1>
-            <p>Thank you for registering in our service. Your account is now active.</p>
-            <p>If you did not register, please ignore this email.</p>
-            <div>
-                <img src="https://drive.google.com/thumbnail?id=1N6KlXDVxQqW51nvtQr7yrz9WaRPFWqFt" alt="Logo"
-                     class="logo">
-            </div>
-        </div>
-    </div>
-</div>
+<body>
+
+<table class="main">
+    <tr>
+        <td>
+            <table class="content">
+                <tr>
+                    <td>
+                        <h1>Welcome, <span th:text="${username}"></span>!</h1>
+                        <p>Thank you for registering in our service. Your account is now active.</p>
+                        <p>If you did not register, please ignore this email.</p>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <img
+                                src="https://drive.google.com/thumbnail?id=1N6KlXDVxQqW51nvtQr7yrz9WaRPFWqFt"
+                                alt="Logo"
+                                class="logo"
+                        />
+                    </td>
+                </tr>
+            </table>
+        </td>
+    </tr>
+</table>
+
+</body>
 </html>
