--- a/vulcanus/src/main/resources/templates/forgotPasswordEmail.html
+++ b/vulcanus/src/main/resources/templates/forgotPasswordEmail.html
@@ -25,7 +25,7 @@
                 </tr>
                 <tr>
                     <td style="padding: 0;font-family: Arial, sans-serif;">
-                        <img src="https://ucarecdn.com/0961d845-01b3-4d35-bdd2-8d64969bf5da/mercuryLogo.png" alt="Logo" class="logo" style="border: 0;border-radius: 4px;width: 15%;max-width: 120px;margin-top: 2%;">
+                        <img src="https://drive.google.com/thumbnail?id=1N6KlXDVxQqW51nvtQr7yrz9WaRPFWqFt" alt="Logo" class="logo" style="border: 0;border-radius: 4px;width: 15%;max-width: 120px;margin-top: 2%;">
                     </td>
                 </tr>
             </table>
