--- a/vulcanus/src/main/resources/templates/cssInliner/forgotPasswordEmailForCssInliner.html
+++ b/vulcanus/src/main/resources/templates/cssInliner/forgotPasswordEmailForCssInliner.html
@@ -86,7 +86,7 @@
                 <tr>
                     <td>
                         <img
-                                src="https://ucarecdn.com/0961d845-01b3-4d35-bdd2-8d64969bf5da/mercuryLogo.png"
+                                src="https://drive.google.com/thumbnail?id=1N6KlXDVxQqW51nvtQr7yrz9WaRPFWqFt"
                                 alt="Logo"
                                 class="logo"
                         />
