--- a/venus/src/index.css
+++ b/venus/src/index.css
@@ -8,7 +8,7 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    font-family: 'Outfit', sans-serif;
+    font-family: 'Moderustic', sans-serif;
 }
 
 /*TODO: do usuniecia*/
