--- a/venus/src/index.css
+++ b/venus/src/index.css
@@ -1,15 +1,62 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import 'tailwindcss';
 
-* {
+@custom-variant dark (&:is(.dark *));
+
+@theme {
+  --height-1\/10: 10%;
+
+  --color-mainBlue: #4242f0;
+  --color-mainBlueDarker: #0d0db5;
+  --color-darkText: #e5e5e5;
+  --color-darkBg: #0f0f10;
+  --color-darkBgSoft: #1b1c1d;
+  --color-darkBgMuted: #323539;
+  --color-darkBorder: #939394;
+  --color-lightText: #222222;
+  --color-lightBg: #e4e3e3;
+  --color-lightBgSoft: #ffffff;
+  --color-lightBgButed: #f2f2f2;
+  --color-lightBorder: #fbfdff;
+  --color-violetDark: #363041;
+  --color-violetLight: #6D6183;
+  --color-violetDarker: #2C2734;
+  --color-first: #2C3E50;
+  --color-second: #34495E;
+  --color-third: #1ABC9C;
+  --color-fourth: #16A085;
+  --color-fifth: #ECF0F1;
+  --color-sixth: #E94560;
+  --color-magenta: #A01BC1;
+
+  --animate-slide-in-from-left: slideInFromLeft 0.3s ease-out;
+
+  @keyframes slideInFromLeft {
+    0% {
+      transform: translateX(-100%);
+      opacity: 0;
+    }
+    100% {
+      transform: translateX(0);
+      opacity: 1;
+    }
+  }
+}
+
+@layer base {
+  *,
+  ::after,
+  ::before,
+  ::backdrop,
+  ::file-selector-button {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    border-color: var(--color-gray-200, currentcolor);
+  }
 }
 
 /*jeszcze nie rozgryzłem czemu ale styl do rozmiaru mapy musi być w index.css, inaczej nie działa*/
 .leaflet-container {
-    height: 95vh;
-    width: 100%;
+  height: 95vh;
+  width: 100%;
 }
