--- a/venus/src/index.css
+++ b/venus/src/index.css
@@ -27,6 +27,7 @@
   --color-fifth: #ECF0F1;
   --color-sixth: #E94560;
   --color-magenta: #A01BC1;
+  --color-darkYellow: #C5A03C;
 
   --animate-slide-in-from-left: slideInFromLeft 0.3s ease-out;
 
