Add chat formatting utilities and mock data for chat list

--- a/venus/src/index.css
+++ b/venus/src/index.css
@@ -1,4 +1,9 @@
 @import 'tailwindcss';
+/* documentation of the plugin https://adoxography.github.io/tailwind-scrollbar/ */
+@plugin 'tailwind-scrollbar' {
+  nocompatible: true;
+  preferredStrategy: 'pseudoelements';
+}
 
 @custom-variant dark (&:is(.dark *));
 
