implemented light theme

--- a/venus/src/index.css
+++ b/venus/src/index.css
@@ -20,6 +20,7 @@
   --color-violetDark: #363041;
   --color-violetLight: #6D6183;
   --color-violetDarker: #2C2734;
+  --color-violetBright: #835ACE;
   --color-first: #2C3E50;
   --color-second: #34495E;
   --color-third: #1ABC9C;
