implemented condition for switching between polygon and marker depending on zoom level and spot area

--- a/venus/src/index.css
+++ b/venus/src/index.css
@@ -37,6 +37,7 @@
   --color-locationMarkerDarkerBlue: #A3DCFF;
   --color-locationMarkerLightBlue: #52BAFB;
   --color-userLocationPin: #4285f4;
+  --color-spotLocationMarker: #A8071A;
 
   --animate-slide-in-from-left: slideInFromLeft 0.3s ease-out;
 
