--- a/venus/src/index.css
+++ b/venus/src/index.css
@@ -19,6 +19,7 @@
   --color-darkBorder: #939394;
   --color-lightText: #222222;
   --color-lightBg: #e4e3e3;
+  --color-lightBgDarker: #cccaca;
   --color-lightBgSoft: #ffffff;
   --color-lightBgButed: #f2f2f2;
   --color-lightBorder: #fbfdff;
