Add animation and dark / light mode

--- a/venus/src/index.css
+++ b/venus/src/index.css
@@ -24,6 +24,7 @@
   --color-lightBorder: #fbfdff;
   --color-violetDark: #363041;
   --color-violetLight: #6D6183;
+  --color-violetLighter: #9b8cbd;
   --color-violetDarker: #2C2734;
   --color-violetBright: #835ACE;
   --color-first: #2C3E50;
