--- a/venus/src/index.css
+++ b/venus/src/index.css
@@ -36,7 +36,7 @@
   --color-darkYellow: #C5A03C;
   --color-locationMarkerDarkerBlue: #A3DCFF;
   --color-locationMarkerLightBlue: #52BAFB;
-  --color-userLocationPin: #4285f4;
+  --color-userLocationDot: #4285f4;
   --color-spotLocationMarker: #A8071A;
 
   --animate-slide-in-from-left: slideInFromLeft 0.3s ease-out;
