Start working on login and register

--- a/venus/src/index.css
+++ b/venus/src/index.css
@@ -21,7 +21,7 @@
   --color-lightBg: #e4e3e3;
   --color-lightBgDarker: #cccaca;
   --color-lightBgSoft: #ffffff;
-  --color-lightBgButed: #f2f2f2;
+  --color-lightBgMuted: #f2f2f2;
   --color-lightBorder: #fbfdff;
   --color-violetDark: #363041;
   --color-violetLight: #6D6183;
