--- a/venus/src/index.css
+++ b/venus/src/index.css
@@ -35,6 +35,7 @@
   --color-sixth: #E94560;
   --color-magenta: #A01BC1;
   --color-darkYellow: #C5A03C;
+  --color-ratingStarColor: #FADB14;
   --color-locationMarkerDarkerBlue: #A3DCFF;
   --color-locationMarkerLightBlue: #52BAFB;
   --color-userLocationDot: #4285f4;
@@ -65,4 +66,24 @@
     padding: 0;
     border-color: var(--color-gray-200, currentcolor);
   }
+}
+
+.custom-rate .ant-rate-star {
+  font-size: 25px;
+}
+
+@media (max-width: 768px) {
+  .custom-rate .ant-rate-star {
+    font-size: 20px;
+  }
+}
+
+@media (max-width: 480px) {
+  .custom-rate .ant-rate-star {
+    font-size: 16px;
+  }
+}
+
+.custom-rate .ant-rate-star:not(.ant-rate-star-full) .ant-rate-star-second {
+  color: #ffffff;
 }
