--- a/venus/src/index.css
+++ b/venus/src/index.css
@@ -27,6 +27,7 @@
   --color-violetLight: #6D6183;
   --color-violetDarker: #2C2734;
   --color-violetBright: #835ACE;
+  --color-darbVioletBtnOutline: #816BA6;
   --color-first: #2C3E50;
   --color-second: #34495E;
   --color-third: #1ABC9C;
