Refactor spot comments to use DTOs and improve component structure, add some styling

--- a/venus/src/index.css
+++ b/venus/src/index.css
@@ -27,6 +27,7 @@
   --color-violetLight: #6D6183;
   --color-violetLighter: #9b8cbd;
   --color-violetDarker: #2C2734;
+  --color-violetBtnBorderDark: #625B6E;
   --color-violetBright: #835ACE;
   --color-darbVioletBtnOutline: #816BA6;
   --color-first: #2C3E50;
