Enhance SpotComment components with improved rating display and author styling

--- a/venus/src/index.css
+++ b/venus/src/index.css
@@ -75,6 +75,11 @@
   font-size: 25px;
 }
 
+.custom-rate-spot-comment .ant-rate-star {
+  font-size: 18px;
+  margin: 0 0.1px;
+}
+
 @media (max-width: 768px) {
   .custom-rate .ant-rate-star {
     font-size: 20px;
@@ -82,5 +87,9 @@
 }
 
 .custom-rate .ant-rate-star:not(.ant-rate-star-full) .ant-rate-star-second {
+  color: #ffffff;
+}
+
+.custom-rate-spot-comment .ant-rate-star:not(.ant-rate-star-full) .ant-rate-star-second {
   color: #ffffff;
 }
