--- a/venus/src/index.css
+++ b/venus/src/index.css
@@ -83,3 +83,7 @@
 .custom-rate .ant-rate-star:not(.ant-rate-star-full) .ant-rate-star-second {
   color: #ffffff;
 }
+
+.ant-picker-header button {
+  color: #e5e5e5 !important;
+}
