--- a/venus/src/index.css
+++ b/venus/src/index.css
@@ -27,6 +27,7 @@
   --color-violetLight: #6D6183;
   --color-violetLighter: #9b8cbd;
   --color-violetDarker: #2C2734;
+  --color-violetBtnBorderDark: #625B6E;
   --color-violetBright: #835ACE;
   --color-darbVioletBtnOutline: #816BA6;
   --color-first: #2C3E50;
@@ -74,6 +75,11 @@
   font-size: 25px;
 }
 
+.custom-rate-spot-comment .ant-rate-star {
+  font-size: 18px;
+  margin: 0 0.1px;
+}
+
 @media (max-width: 768px) {
   .custom-rate .ant-rate-star {
     font-size: 20px;
@@ -81,5 +87,9 @@
 }
 
 .custom-rate .ant-rate-star:not(.ant-rate-star-full) .ant-rate-star-second {
+  color: #ffffff;
+}
+
+.custom-rate-spot-comment .ant-rate-star:not(.ant-rate-star-full) .ant-rate-star-second {
   color: #ffffff;
 }
