--- a/venus/src/index.css
+++ b/venus/src/index.css
@@ -71,6 +71,10 @@
     }
 }
 
+body {
+    background-color: var(--color-darkBg);
+}
+
 .custom-rate .ant-rate-star {
     font-size: 25px;
 }
@@ -91,7 +95,7 @@
 }
 
 .custom-rate-spot-comment
-    .ant-rate-star:not(.ant-rate-star-full)
-    .ant-rate-star-second {
+.ant-rate-star:not(.ant-rate-star-full)
+.ant-rate-star-second {
     color: #ffffff;
 }
