--- a/venus/src/index.css
+++ b/venus/src/index.css
@@ -1,8 +1,8 @@
-@import 'tailwindcss';
+@import "tailwindcss";
 /* documentation of the plugin https://adoxography.github.io/tailwind-scrollbar/ */
 @plugin 'tailwind-scrollbar' {
-  nocompatible: true;
-  preferredStrategy: 'pseudoelements';
+    nocompatible: true;
+    preferredstrategy: "pseudoelements";
 }
 
 @custom-variant dark (&:is(.dark *));
@@ -10,36 +10,36 @@
 @theme {
     --height-1\/10: 10%;
 
-  --color-mainBlue: #4242f0;
-  --color-mainBlueDarker: #0d0db5;
-  --color-darkText: #e5e5e5;
-  --color-darkBg: #0f0f10;
-  --color-darkBgSoft: #1b1c1d;
-  --color-darkBgMuted: #323539;
-  --color-darkBorder: #939394;
-  --color-lightText: #222222;
-  --color-lightBg: #e4e3e3;
-  --color-lightBgDarker: #cccaca;
-  --color-lightBgSoft: #ffffff;
-  --color-lightBgButed: #f2f2f2;
-  --color-lightBorder: #fbfdff;
-  --color-violetDark: #363041;
-  --color-violetLight: #6D6183;
-  --color-violetLighter: #8f6fbc;
-  --color-violetDarker: #2C2734;
-  --color-violetBright: #835ACE;
-  --color-first: #2C3E50;
-  --color-second: #34495E;
-  --color-third: #1ABC9C;
-  --color-fourth: #16A085;
-  --color-fifth: #ECF0F1;
-  --color-sixth: #E94560;
-  --color-magenta: #A01BC1;
-  --color-darkYellow: #C5A03C;
-  --color-locationMarkerDarkerBlue: #A3DCFF;
-  --color-locationMarkerLightBlue: #52BAFB;
-  --color-userLocationDot: #4285f4;
-  --color-spotLocationMarker: #A8071A;
+    --color-mainBlue: #4242f0;
+    --color-mainBlueDarker: #0d0db5;
+    --color-darkText: #e5e5e5;
+    --color-darkBg: #0f0f10;
+    --color-darkBgSoft: #1b1c1d;
+    --color-darkBgMuted: #323539;
+    --color-darkBorder: #939394;
+    --color-lightText: #222222;
+    --color-lightBg: #e4e3e3;
+    --color-lightBgDarker: #cccaca;
+    --color-lightBgSoft: #ffffff;
+    --color-lightBgButed: #f2f2f2;
+    --color-lightBorder: #fbfdff;
+    --color-violetDark: #363041;
+    --color-violetLight: #6d6183;
+    --color-violetLighter: #8f6fbc;
+    --color-violetDarker: #2c2734;
+    --color-violetBright: #835ace;
+    --color-first: #2c3e50;
+    --color-second: #34495e;
+    --color-third: #1abc9c;
+    --color-fourth: #16a085;
+    --color-fifth: #ecf0f1;
+    --color-sixth: #e94560;
+    --color-magenta: #a01bc1;
+    --color-darkYellow: #c5a03c;
+    --color-locationMarkerDarkerBlue: #a3dcff;
+    --color-locationMarkerLightBlue: #52bafb;
+    --color-userLocationDot: #4285f4;
+    --color-spotLocationMarker: #a8071a;
 
     --animate-slide-in-from-left: slideInFromLeft 0.3s ease-out;
 
