--- a/venus/src/index.css
+++ b/venus/src/index.css
@@ -21,13 +21,15 @@
     --color-lightBg: #e4e3e3;
     --color-lightBgDarker: #cccaca;
     --color-lightBgSoft: #ffffff;
-    --color-lightBgButed: #f2f2f2;
+    --color-lightBgMuted: #f2f2f2;
     --color-lightBorder: #fbfdff;
     --color-violetDark: #363041;
     --color-violetLight: #6d6183;
-    --color-violetLighter: #8f6fbc;
+    --color-violetLighter: #9b8cbd;
     --color-violetDarker: #2c2734;
+    --color-violetBtnBorderDark: #625b6e;
     --color-violetBright: #835ace;
+    --color-darbVioletBtnOutline: #816ba6;
     --color-first: #2c3e50;
     --color-second: #34495e;
     --color-third: #1abc9c;
@@ -36,6 +38,7 @@
     --color-sixth: #e94560;
     --color-magenta: #a01bc1;
     --color-darkYellow: #c5a03c;
+    --color-ratingStarColor: #fadb14;
     --color-locationMarkerDarkerBlue: #a3dcff;
     --color-locationMarkerLightBlue: #52bafb;
     --color-userLocationDot: #4285f4;
