style: enhance carousel appearance with rounded corners

--- a/venus/src/index.css
+++ b/venus/src/index.css
@@ -95,3 +95,8 @@
     .ant-rate-star-second {
     color: #ffffff;
 }
+
+.carousel-rounded > .slick-list {
+    border-radius: 1rem;
+    overflow: hidden;
+}
