--- a/venus/src/index.css
+++ b/venus/src/index.css
@@ -80,6 +80,10 @@
     margin: 0 0.1px;
 }
 
+.custom-rate-searched-spot .ant-rate-star {
+  font-size: 20px;
+}
+
 @media (max-width: 768px) {
     .custom-rate .ant-rate-star {
         font-size: 20px;
@@ -94,6 +98,10 @@
     .ant-rate-star:not(.ant-rate-star-full)
     .ant-rate-star-second {
     color: #ffffff;
+}
+
+.custom-rate-searched-spot .ant-rate-star:not(.ant-rate-star-full) .ant-rate-star-second {
+  color: #ffffff;
 }
 
 .carousel-rounded > .slick-list {
