style: standardize indentation across multiple files

--- a/venus/src/index.css
+++ b/venus/src/index.css
@@ -81,7 +81,7 @@
 }
 
 .custom-rate-searched-spot .ant-rate-star {
-  font-size: 20px;
+    font-size: 20px;
 }
 
 @media (max-width: 768px) {
@@ -100,8 +100,10 @@
     color: #ffffff;
 }
 
-.custom-rate-searched-spot .ant-rate-star:not(.ant-rate-star-full) .ant-rate-star-second {
-  color: #ffffff;
+.custom-rate-searched-spot
+    .ant-rate-star:not(.ant-rate-star-full)
+    .ant-rate-star-second {
+    color: #ffffff;
 }
 
 .carousel-rounded > .slick-list {
