--- a/venus/src/index.css
+++ b/venus/src/index.css
@@ -110,8 +110,10 @@
     color: #e5e5e5 !important;
 }
 
-.custom-rate-searched-spot .ant-rate-star:not(.ant-rate-star-full) .ant-rate-star-second {
-  color: #ffffff;
+.custom-rate-searched-spot
+    .ant-rate-star:not(.ant-rate-star-full)
+    .ant-rate-star-second {
+    color: #ffffff;
 }
 
 .carousel-rounded > .slick-list {
