refactor media handling to replace photo references with media, introduce SpotDetailsGallery component, and add video support

--- a/venus/src/index.css
+++ b/venus/src/index.css
@@ -108,3 +108,11 @@
     border-radius: 1rem;
     overflow: hidden;
 }
+
+.media-controller:fullscreen .media-control-bar {
+    margin-bottom: 0;
+}
+
+.media-control-bar {
+    margin-bottom: 1.5rem;
+}
