--- a/venus/src/index.css
+++ b/venus/src/index.css
@@ -124,3 +124,11 @@ body {
     border-radius: 1rem;
     overflow: hidden;
 }
+
+.media-controller:fullscreen .media-control-bar {
+    margin-bottom: 0;
+}
+
+.media-control-bar {
+    margin-bottom: 1.5rem;
+}
