--- a/venus/src/index.css
+++ b/venus/src/index.css
@@ -25,6 +25,7 @@
     --color-lightBorder: #fbfdff;
     --color-violetDark: #363041;
     --color-violetLight: #6d6183;
+    --color-violetLightDarker: #4f4660;
     --color-violetLighter: #9b8cbd;
     --color-violetDarker: #2c2734;
     --color-violetBtnBorderDark: #625b6e;
