--- a/venus/src/index.css
+++ b/venus/src/index.css
@@ -124,3 +124,15 @@ body {
     border-radius: 1rem;
     overflow: hidden;
 }
+
+.tiptap-editor-content h1 {
+    @apply text-4xl font-bold mb-4;
+}
+
+.tiptap-editor-content h2 {
+    @apply text-3xl font-semibold mb-3;
+}
+
+.tiptap-editor-content h3 {
+    @apply text-2xl font-semibold mb-2;
+}
