MER-239 added useClickOutside hook, changed css in header dropdown

--- a/venus/src/index.css
+++ b/venus/src/index.css
@@ -125,6 +125,10 @@ body {
     overflow: hidden;
 }
 
+.tiptap{
+    height: 100%;
+}
+
 .tiptap-editor-content h1 {
     @apply text-4xl font-bold mb-4;
 }
