--- a/venus/src/index.css
+++ b/venus/src/index.css
@@ -23,8 +23,8 @@
     --color-lightBgSoft: #ffffff;
     --color-lightBgMuted: #f2f2f2;
     --color-lightBorder: #fbfdff;
-    --color-lightGrayishViolet: #F2EEF9;
-    --color-grayText: #D3D3D3;
+    --color-lightGrayishViolet: #f2eef9;
+    --color-grayText: #d3d3d3;
     --color-violetDark: #363041;
     --color-violetLight: #6d6183;
     --color-violetLightDarker: #4f4660;
