MER-239 pr fixes - added title and content validation on backend

--- a/venus/src/index.css
+++ b/venus/src/index.css
@@ -183,13 +183,14 @@ body {
     @apply list-decimal ml-4
 }
 
-.tiptap br {
-    display: block;
-}
-
 .tiptap li p {
     display: inline;
     margin: 0;
+}
+
+.tiptap p:empty::before {
+    content: '';
+    display: inline-block;
 }
 
 .tiptap li {
