Working on styling spot weather components

--- a/venus/src/index.css
+++ b/venus/src/index.css
@@ -24,6 +24,9 @@
     --color-lightBgMuted: #f2f2f2;
     --color-lightBorder: #fbfdff;
     --color-lightGrayishViolet: #f2eef9;
+    --color-whiteSmoke: #f6f6f6;
+    --color-lightGrayishBlue: #e5e9ee;
+    --color-paleBlueGray: #acafbb;
     --color-grayText: #d3d3d3;
     --color-violetDark: #363041;
     --color-violetLight: #6d6183;
