--- a/venus/src/index.css
+++ b/venus/src/index.css
@@ -25,6 +25,7 @@
     --color-lightBorder: #fbfdff;
     --color-lightGrayishViolet: #f2eef9;
     --color-whiteSmoke: #f6f6f6;
+    --color-warmerWhiteSmoke: #ece9e9;
     --color-lightGrayishBlue: #e5e9ee;
     --color-paleBlueGray: #acafbb;
     --color-grayText: #d3d3d3;
