Add medium dark blue background to timeline plot and update stroke color

--- a/venus/src/index.css
+++ b/venus/src/index.css
@@ -37,6 +37,7 @@
     --color-violetBtnBorderDark: #625b6e;
     --color-violetBright: #835ace;
     --color-darbVioletBtnOutline: #816ba6;
+    --color-mediumDarkBlue: #424b77;
     --color-first: #2c3e50;
     --color-second: #34495e;
     --color-third: #1abc9c;
