MER-301 - changed css, side panels on forum now scroll down with user

--- a/venus/src/index.css
+++ b/venus/src/index.css
@@ -221,3 +221,7 @@ body {
     counter-increment: list-item;
     display: inline-block;
 }
+
+.sticky-forum-panel {
+    @apply sticky top-[1.8rem] self-start;
+}
