--- a/venus/src/index.css
+++ b/venus/src/index.css
@@ -9,7 +9,7 @@
 
 @theme {
     --height-1\/10: 10%;
-
+    --breakpoint-3xl: 160rem;
     --color-mainBlue: #4242f0;
     --color-mainBlueDarker: #0d0db5;
     --color-darkText: #e5e5e5;
