--- a/venus/src/index.css
+++ b/venus/src/index.css
@@ -148,19 +148,15 @@ body {
 }
 
 @media (max-width: 1280px) {
-    .media-controller {
-        --media-control-icon-size: 10px;
-        --media-control-padding: 2px;
-        --media-range-track-height: 2px;
-        --media-range-thumb-size: 6px;
-        --media-font-size: 10px;
+    .media-control-bar {
+        --media-control-padding: 0;
+        --media-range-track-height: 1px;
     }
 
     .media-control-bar > * {
-        padding: 0;
+        padding: 1px;
     }
 }
-
 
 .tiptap-editor-content .ProseMirror:focus {
     outline: none;
