enhance expanded gallery sidebar with new styles and improved button functionality

--- a/venus/src/index.css
+++ b/venus/src/index.css
@@ -34,6 +34,7 @@
     --color-violetLightDarker: #4f4660;
     --color-violetLighter: #9b8cbd;
     --color-violetDarker: #2c2734;
+    --color-violetHeavyDark: #1e1b23;
     --color-violetBtnBorderDark: #625b6e;
     --color-violetBright: #835ace;
     --color-darbVioletBtnOutline: #816ba6;
