--- a/venus/src/index.css
+++ b/venus/src/index.css
@@ -32,6 +32,7 @@
     --color-violetDark: #363041;
     --color-violetLight: #6d6183;
     --color-violetLightDarker: #4f4660;
+    --color-violetLightDark: #554a69;
     --color-violetLighter: #9b8cbd;
     --color-violetDarker: #2c2734;
     --color-violetHeavyDark: #1e1b23;
