--- a/venus/src/index.css
+++ b/venus/src/index.css
@@ -15,6 +15,7 @@
     --color-darkText: #e5e5e5;
     --color-darkBg: #0f0f10;
     --color-darkBgSoft: #1b1c1d;
+    --color-grayBg: #d9d9d9;
     --color-darkBgMuted: #323539;
     --color-darkBorder: #939394;
     --color-lightText: #222222;
