--- a/venus/src/index.css
+++ b/venus/src/index.css
@@ -15,6 +15,7 @@
     --color-darkText: #e5e5e5;
     --color-darkBg: #0f0f10;
     --color-darkBgSoft: #1b1c1d;
+    --color-grayBg: #d9d9d9;
     --color-darkBgMuted: #323539;
     --color-darkBorder: #939394;
     --color-lightText: #222222;
@@ -32,8 +33,10 @@
     --color-violetDark: #363041;
     --color-violetLight: #6d6183;
     --color-violetLightDarker: #4f4660;
+    --color-violetLightDark: #554a69;
     --color-violetLighter: #9b8cbd;
     --color-violetDarker: #2c2734;
+    --color-violetHeavyDark: #1e1b23;
     --color-violetBtnBorderDark: #625b6e;
     --color-violetBright: #835ace;
     --color-darbVioletBtnOutline: #816ba6;
